--- a/spring_sse_websocket/build.gradle
+++ b/spring_sse_websocket/build.gradle
@@ -21,11 +21,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux:2.6.7'
-
-    implementation("org.infinispan:infinispan-core:12.0.1.Final")
-    implementation("org.infinispan:infinispan-commons:12.0.1.Final")
-    implementation("org.infinispan:infinispan-marshaller-protostuff:12.0.1.Final")
-    implementation("org.jboss.marshalling:jboss-marshalling-osgi:2.0.10.Final")
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
